<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Hitung_persegi">
<FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Panjang"
                android:ems="10"
                android:id="@+id/editText3" android:layout_marginTop="52dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.263"
                android:hint="@string/Panjang"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Lebar"
                android:ems="10"
                android:id="@+id/editText4" android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/editText3" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.263"
                android:hint="@string/lebar"/>
        <Button
                android:text="@string/btn_hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_hitung" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/editText4"
                app:layout_constraintStart_toStartOf="@+id/editText4"
                app:layout_constraintEnd_toEndOf="@+id/editText4" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="Luas = "
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/textView9" android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitung" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="60dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:id="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitung" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="188dp" android:layout_marginTop="52dp"
                app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.459" android:text="@string/Luas_Persegi" tools:text="..."/>
        <TextView
                android:text="Keliling ="
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:id="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="60dp" android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"/>
        <TextView
                android:text="@string/kelilingpersegi"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/textView12" app:layout_constraintStart_toEndOf="@+id/textView11"
                android:layout_marginStart="52dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"/>
        <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.169"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>