<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         tools:context=".HitungSegitiga"
>
<FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Alas"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_marginTop="76dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.203"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Tinggi"
                android:ems="10"
                android:id="@+id/editText2"
                app:layout_constraintEnd_toEndOf="@+id/editText" app:layout_constraintStart_toStartOf="@+id/editText"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText"/>
        <Button
                android:text="@string/btn_hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_hitung" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintHorizontal_bias="0.12"/>
        <TextView
                android:text="Luas ="
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="44dp"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitung"/>
        <TextView
                android:text="@string/luas_segitiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" app:layout_constraintStart_toEndOf="@+id/textView4"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitung" app:layout_constraintHorizontal_bias="0.028"
                tools:text="...."/>
        <TextView
                android:text="@string/kelilingsegitiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                tools:text="...."
                app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.035"/>
        <TextView
                android:text="keliling ="
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="44dp"/>
        <Button
                android:text="Share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintHorizontal_bias="0.117"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>